--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                         <span>Temp : </span><input id='temp' type='number' value='2'>
                         <span>Rate : </span><input id='rate' type='number' value='0.99'>
                         <span>Step : </span><input id='step' type='number' value='1'>
-                        <input type='button' value='RESTART' onclick='setSA'></input>
+                        <input type='button' value='RESTART' onclick='setSA()'></input>
                     </div>
                 </div>
                 <p>
