For github pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -27,9 +27,7 @@
                 <p>
                     <span id='count'></span>
                 </p>
-                <canvas id='graph' class='graph' width='800' height='800'>
-        
-                </canvas>
+                <canvas id='graph' class='graph' width='800' height='800'></canvas>
             </div>
         
             <div class='foot'>
@@ -41,8 +39,8 @@
     </div>
 </body>
 
-<script src='sim-anneal.js'></script>
-<script src='graph.js'></script>
+<script src='js/sim-anneal.js'></script>
+<script src='js/graph.js'></script>
 
 <script>
 
